# diagram-as-code

./: LICENSE  README.md  pyproject.toml
diagrams/eraser/: base.py  cloud_architecture.py  entity_relationship.py  properties.py  relations.py  sequence.py
tests/eraser/: conftest.py  test_cloud_architecture.py  test_entity_relationship.py  test_properties.py  test_sequence.py
